Stage/templates/network.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "resourcePrefix": {
            "type": "string"
        },
        "webDNSNamePrefix": {
            "type": "string"
        },
        "dataNicName": {
            "type": "string"
        },
        "jboxNicName": {
            "type": "string"
        }
    },
    "variables": {
        "apiVersion": "2015-08-01",
        "nsgName": "[concat(parameters('resourcePrefix'), 'nsg')]",
        "vnetConfig": {
            "name": "[concat(parameters('resourcePrefix'), 'vnet')]",
            "addressPrefix": "10.0.0.0/16",
            "webSubnetName": "web-subnet",
            "webSubnetPrefix": "10.0.0.0/24",
            "dataSubnetName": "data-subnet",
            "dataSubnetPrefix": "10.0.1.0/24",
            "mgmtSubnetName": "mgmt-subnet",
            "mgmtSubnetPrefix": "10.0.2.0/24"
        },
        "webLBConfig": {
            "name": "[concat(parameters('resourcePrefix'), 'weblb')]",
            "backendPoolName": "[concat(parameters('resourcePrefix'), 'weblbbepool')]",
            "frontendIPConfigName": "[concat(parameters('resourcePrefix'), 'weblbfeipconfig')]",
            "pipAddressName": "[concat(parameters('resourcePrefix'), 'weblbpip')]",
            "pipAddressType": "Dynamic",
            "probeName": "[concat(parameters('resourcePrefix'), 'weblbprobe')]"
        },
        "dataLBConfig": {
            "name": "[concat(parameters('resourcePrefix'), 'datalb')]",
            "dnsName": "[concat(parameters('resourcePrefix'), 'datalbdns')]",
            "backendPoolName": "[concat(parameters('resourcePrefix'), 'datalbbepool')]",
            "frontendIPConfigName": "[concat(parameters('resourcePrefix'), 'datalbfeipconfig')]",
            "ipAddressPrefix": "10.0.1.5",
            "ipAddressType": "Static",
            "ipConfigName": "[concat(parameters('resourcePrefix'), 'datalbipconfig')]"
        },
        "jboxConfig": {
            "name": "[concat(parameters('resourcePrefix'), 'jboxlb')]",
            "dnsName": "[concat(parameters('resourcePrefix'), 'jboxlbdns')]",
            "backendPoolName": "[concat(parameters('resourcePrefix'), 'jboxlbbepool')]",
            "frontendIPConfigName": "[concat(parameters('resourcePrefix'), 'jboxlbfeipconfig')]",
            "ipConfigName": "[concat(parameters('resourcePrefix'), 'jboxlbipconfig')]",
            "pipAddressName": "[concat(parameters('resourcePrefix'), 'jboxlbpip')]",
            "pipAddressType": "Static"
        }
    },
    "resources": [
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[variables('vnetConfig').name]",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vnetConfig').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vnetConfig').webSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('vnetConfig').webSubnetPrefix]"
                        }
                    },
                    {
                        "name": "[variables('vnetConfig').dataSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('vnetConfig').dataSubnetPrefix]"
                        }
                    },
                    {
                        "name": "[variables('vnetConfig').mgmtSubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('vnetConfig').mgmtSubnetPrefix]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('webLBConfig').pipAddressName]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "[variables('webLBConfig').pipAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('webDNSNamePrefix')]"
                }
            }
        },
        {
            "apiVersion": "2016-03-30",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[variables('jboxConfig').pipAddressName]",
            "location": "[resourceGroup().location]",
            "properties": {
                "publicIPAllocationMethod": "[variables('jboxConfig').pipAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[variables('jboxConfig').dnsName]"
                }
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "name": "[variables('webLBConfig').name]",
            "type": "Microsoft.Network/loadBalancers",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('webLBConfig').pipAddressName)]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "name": "[variables('webLBConfig').frontendIPConfigName]",
                        "properties": {
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('webLBConfig').pipAddressName)]"
                            }
                        }
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('webLBConfig').backendPoolName]"
                    }
                ],
                "loadBalancingRules": [
                    {
                        "name": "httpIn",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/frontendIPConfigurations/', variables('webLBConfig').frontendIPConfigName)]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/backendAddressPools/', variables('webLBConfig').backendPoolName)]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 80,
                            "backendPort": 80,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 5,
                            "probe": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/probes/', variables('webLBConfig').probeName)]"
                            }
                        }
                    },
                    {
                        "name": "httpsIn",
                        "properties": {
                            "frontendIPConfiguration": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/frontendIPConfigurations/', variables('webLBConfig').frontendIPConfigName)]"
                            },
                            "backendAddressPool": {
                                "id": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/backendAddressPools/', variables('webLBConfig').backendPoolName)]"
                            },
                            "protocol": "Tcp",
                            "frontendPort": 443,
                            "backendPort": 443,
                            "enableFloatingIP": false,
                            "idleTimeoutInMinutes": 5
                        }
                    }
                ],
                "probes": [
                    {
                        "properties": {
                            "protocol": "Tcp",
                            "port": 80,
                            "intervalInSeconds": 15,
                            "numberOfProbes": 2
                        },
                        "name": "[variables('webLBConfig').probeName]"
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/loadBalancers",
            "name": "[variables('dataLBConfig').name]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetConfig').name)]"
            ],
            "properties": {
                "frontendIPConfigurations": [
                    {
                        "properties": {
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnetConfig').name), '/subnets/', variables('vnetConfig').dataSubnetName)]"
                            },
                            "privateIPAddress": "[variables('dataLBConfig').ipAddressPrefix]",
                            "privateIPAllocationMethod": "[variables('dataLBConfig').ipAddressType]"
                        },
                        "name": "[variables('dataLBConfig').frontendIPConfigName]"
                    }
                ],
                "backendAddressPools": [
                    {
                        "name": "[variables('dataLBConfig').backendPoolName]"
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('dataNicName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('vnetConfig').name)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[variables('dataLBConfig').ipConfigName]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnetConfig').name), '/subnets/', variables('vnetConfig').dataSubnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('jboxNicName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', variables('jboxConfig').pipAddressName)]",
                "[concat('Microsoft.Network/virtualNetworks/', variables('vnetConfig').name)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "[variables('jboxConfig').ipConfigName]",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('jboxConfig').pipAddressName)]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnetConfig').name), '/subnets/', variables('vnetConfig').mgmtSubnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('apiVersion')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[variables('nsgName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "allow-http",
                        "properties": {
                            "description": "Allow HTTP",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-https",
                        "properties": {
                            "description": "Allow HTTPS",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "INTERNET",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-justin",
                        "properties": {
                            "description": "Allow Justin",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "71.231.12.245",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 200,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "allow-jan",
                        "properties": {
                            "description": "Allow Jan",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "77.27.225.108",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 201,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        }
    ],
    "outputs": {
        "result": {
            "type": "object",
            "value": {
                "webSubnetId": "[concat(resourceId('Microsoft.Network/virtualNetworks', variables('vnetConfig').name), '/subnets/', variables('vnetConfig').webSubnetName)]",
                "webBackendPoolId": "[concat(resourceId('Microsoft.Network/loadBalancers', variables('webLBConfig').name), '/backendAddressPools/', variables('webLBConfig').backendPoolName)]"
            }
        }
    }
}
